Added user integration spec, cleaned up post and timeline specs,
