# app/models/comment.rb
@@ -3,4 +3,5 @@ class Comment < ApplicationRecord
   belongs_to :post
 
   validates :message, presence: :true
+  validates :commented_at, presence: :true
 end
