# app/models/user.rb
@@ -9,6 +9,7 @@ class User < ApplicationRecord
   validates :email, presence: true, uniqueness: { case_sensitive: false }, length: { maximum: 50 }, format: { with: VALID_EMAIL_REGEX }
 
   validates :name, presence: true, length: { maximum: 50 }
+  validates :registered_at, presence: :true
 
   def average_rating
     if self.ratings.count > 0
